--- a/ac-booking.html
+++ b/ac-booking.html
@@ -214,7 +214,7 @@
     <div class="section">
       <h2>冷氣品牌（可複選） <span class="required">*</span></h2>
       <div class="checkbox-group">
-        <label><input type="checkbox" name="brand[]" value="HITACHI日立冷氣" required>HITACHI日立冷氣</label>
+        <label><input type="checkbox" name="brand[]" value="HITACHI日立冷氣">HITACHI日立冷氣</label>
         <label><input type="checkbox" name="brand[]" value="Panasonic 國際牌">Panasonic 國際牌</label>
         <label><input type="checkbox" name="brand[]" value="DAIKIN 大金冷氣">DAIKIN 大金冷氣</label>
         <label><input type="checkbox" name="brand[]" value="MITSUBISHI 三菱">MITSUBISHI 三菱</label>
